deployment/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: post-service
  name: post-service
  namespace: aibles-social
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - image: us.gcr.io/aibles-social/post-service:latest
          name: post-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8091
      imagePullSecrets:
        - name: regcred
